--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>$AGP — AutoGoldPro | Честный мем-токен</title>
-  <meta name="description" content="Fair Launch • LP Burned • 0% Tax • Бесплатный индикатор ASTER Scalp Pro v5">
+  <title>$AGP — AutoGoldPro | Fair Launch Meme Token</title>
+  <meta name="description" content="Fair Launch • LP Burned • 0% Tax • Free ASTER Scalp Pro v5 (Coming Soon)">
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -26,17 +26,19 @@
     }
     .btn {
       display: inline-block;
-      background: #ffcc00;
-      color: #000;
+      background: #555;
+      color: #aaa;
       padding: 12px 24px;
       text-decoration: none;
       border-radius: 8px;
       font-weight: bold;
       margin: 15px 0;
-      transition: transform 0.2s;
+      cursor: not-allowed;
     }
-    .btn:hover {
-      transform: scale(1.03);
+    .btn-tg {
+      background: #0088cc;
+      color: white;
+      cursor: pointer;
     }
     .message {
       background: #151525;
@@ -45,12 +47,13 @@
       margin: 25px 0;
       border-left: 3px solid gold;
     }
-    .transparency-note {
+    .coming-soon {
       background: #1a1a2e;
-      padding: 20px;
+      padding: 25px;
       border-radius: 10px;
       margin: 25px 0;
-      border-left: 3px solid #4fc3f7;
+      border-left: 3px solid #ff6f00;
+      text-align: center;
     }
     code {
       background: #2a2a3a;
@@ -70,6 +73,19 @@
     li {
       margin-bottom: 8px;
     }
+    .timestamp {
+      font-size: 0.9em;
+      color: #777;
+      text-align: center;
+      margin-top: 15px;
+    }
+    a {
+      color: #4fc3f7;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -80,77 +96,71 @@
 
   <div class="message">
     <p>
-      Привет. Меня зовут человек за AutoGoldPro, и я устал от скамов.
+      Hi. I’m the creator behind AutoGoldPro, and I’m tired of scams.
     </p>
     <p>
-      Поэтому я запустил <strong>$AGP</strong> — просто чтобы показать: можно по-другому.
+      So I’m launching <strong>$AGP</strong> — just to show it can be done differently.
     </p>
     <p style="font-weight: bold; color: gold; text-align: center; margin: 15px 0;">
-      «Если взлетит — круто. Если нет — у тебя всё равно есть бесплатный про-индикатор.»
+      «If it pumps — great. If not — you’ll still get a free pro-grade indicator.»
     </p>
     <p>
-      А в качестве благодарности — мой индикатор, который я использую сам:
+      The <strong>ASTER Scalp Pro v5 Enhanced</strong> indicator will be available to all — but not yet.
     </p>
-    <p style="text-align: center;">
-      <a href="https://ru.tradingview.com/script/jhUCxCj3-aster-scalp-pro-v5-enhanced-autogoldpro/" 
-         target="_blank" 
-         class="btn">
-        ASTER Scalp Pro v5 Enhanced
+  </div>
+
+  <div class="coming-soon">
+    <h3>🚀 Coming Soon</h3>
+    <p>
+      The $AGP token is in final preparation.
+    </p>
+    <p>
+      ✅ Contract deployment<br>
+      ✅ Liquidity: 100M AGP + 0.1 BNB<br>
+      ✅ LP tokens burned to <code>0x000...dEaD</code><br>
+      ✅ Full transparency on BSCScan
+    </p>
+    <p>
+      <strong>Follow all updates in our official Telegram channel:</strong><br>
+      <a href="https://t.me/AutoGoldPro_AGP" target="_blank" class="btn btn-tg">
+        @AutoGoldPro_AGP
       </a>
     </p>
+    <div class="timestamp">
+      Last updated: October 25, 2025
+    </div>
   </div>
 
-  <h3>📊 О индикаторе</h3>
+  <h3>📊 About the Bonus Indicator</h3>
   <p>
-    <strong>ASTER Scalp Pro v5 Enhanced</strong> — инструмент для поиска точек входа с учётом тренда, объёма и рыночного контекста.
+    <strong>ASTER Scalp Pro v5 Enhanced</strong> is a TradingView script for manual trading:
   </p>
   <ul>
-    <li>Режимы: Conservative, Balanced, Aggressive</li>
-    <li>Автоматические TP/SL и трейлинг-стоп</li>
-    <li>Фильтр по BTC, ETH, BNB или любой паре с BINANCE, BYBIT, OKX</li>
-    <li>Поддержка алертов (Long / Short)</li>
+    <li>Modes: Conservative, Balanced, Aggressive</li>
+    <li>Auto TP/SL + Trailing Stop</li>
+    <li>Market filter (BTC, ETH, BNB, or any pair from BINANCE, BYBIT, OKX)</li>
+    <li>Alerts for Long / Short signals</li>
   </ul>
   <p>
-    <em>Не является ботом. Помогает анализировать рынок вручную.</em>
+    🔒 <em>Access will be enabled after launch. Not available yet.</em>
   </p>
 
-  <div class="transparency-note">
-    <h3>🔍 Прозрачность — наш приоритет</h3>
-    <p>
-      После запуска на кошельке создателя (<code>0xEF93...686E</code>) останется <strong>900 000 000 AGP</strong> (90% от общего предложения).
-    </p>
-    <p>
-      🔹 Это <strong>не «командные токены»</strong> и не «резерв для дампа».  
-      🔹 Это просто <strong>остаток после добавления ликвидности</strong> (100 млн AGP ушли в LP).
-    </p>
-    <p>
-      <strong>Нет намерения делать массовую продажу.</strong>  
-      Если будут продажи — они будут <em>постепенными</em>, <em>в рамках рыночного спроса</em>, без давления на цену.
-    </p>
-    <p>
-      Вы можете <a href="https://bscscan.com/address/0xEF93e2d27098aa76371ea182371Ca588A6C8686E" target="_blank">отслеживать баланс этого адреса в реальном времени</a> на BSCScan.
-    </p>
-    <p style="font-style: italic; color: #aaa; margin-top: 10px;">
-      P.S. Я не верю в «заблокированные токены» на сторонних площадках — это иллюзия безопасности.  
-      Настоящая честность — в открытости, а не в обещаниях.
-    </p>
+  <h3>✅ Planned Token Details</h3>
+  <ul>
+    <li>Total Supply: 1,000,000,000 AGP</li>
+    <li>Liquidity: 100,000,000 AGP + 0.1 BNB</li>
+    <li>LP Status: Will be burned permanently</li>
+    <li>Tax: 0% on all transfers</li>
+    <li>Owner: None (immutable contract)</li>
+  </ul>
+
+  <div style="text-align: center; margin: 20px 0;">
+    <span class="btn">Buy on PancakeSwap (soon)</span><br>
+    <span class="btn">Contract: 0x... (soon)</span>
   </div>
-
-  <h3>✅ Параметры токена</h3>
-  <ul>
-    <li>Общее предложение: 1 000 000 000 AGP</li>
-    <li>В ликвидности: 100 000 000 AGP + 0.1 BNB</li>
-    <li>LP токены: <a href="https://bscscan.com/address/0x000000000000000000000000000000000000dEaD" target="_blank">сожжены навсегда</a></li>
-    <li>Комиссия: 0% на все переводы</li>
-    <li>Владелец: отсутствует (контракт неизменяем)</li>
-  </ul>
-
-  <a href="https://pancakeswap.finance/swap?outputCurrency=ВАШ_АДРЕС_ТОКЕНА" class="btn" target="_blank">
-    Купить на PancakeSwap
-  </a>
 
   <div class="disclaimer">
-    ⚠️ Это мем-токен без финансовой ценности. Индикатор предоставляется для образовательных целей. Торговля сопряжена с риском. Не является финансовой рекомендацией.
+    ⚠️ This is a meme token with no financial value. The indicator is for educational purposes only. Trading involves risk. Not financial advice.
   </div>
 </body>
 </html>
