--- a/index.html
+++ b/index.html
@@ -3,164 +3,89 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>$AGP — AutoGoldPro | Fair Launch Meme Token</title>
-  <meta name="description" content="Fair Launch • LP Burned • 0% Tax • Free ASTER Scalp Pro v5 (Coming Soon)">
+  <title>$AGP — AutoGoldPro</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      line-height: 1.6;
       max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
-      background: #0f0f1b;
-      color: #e0e0ff;
-      line-height: 1.6;
+      color: #f0f0f0;
+      background: #0f0f12;
     }
-    h1 {
-      color: gold;
-      text-align: center;
-      font-size: 2.4em;
-      margin-bottom: 10px;
-    }
-    h2, h3 {
-      color: #4fc3f7;
-    }
-    .btn {
-      display: inline-block;
-      background: #555;
-      color: #aaa;
-      padding: 12px 24px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      margin: 15px 0;
-      cursor: not-allowed;
-    }
-    .btn-tg {
-      background: #0088cc;
-      color: white;
-      cursor: pointer;
-    }
-    .message {
-      background: #151525;
-      padding: 25px;
-      border-radius: 12px;
-      margin: 25px 0;
-      border-left: 3px solid gold;
-    }
-    .coming-soon {
-      background: #1a1a2e;
-      padding: 25px;
-      border-radius: 10px;
-      margin: 25px 0;
-      border-left: 3px solid #ff6f00;
-      text-align: center;
-    }
-    code {
-      background: #2a2a3a;
-      padding: 2px 6px;
-      border-radius: 4px;
-    }
-    .disclaimer {
-      font-size: 0.85em;
-      color: #aaa;
-      margin-top: 40px;
-      border-top: 1px solid #333;
-      padding-top: 20px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    li {
-      margin-bottom: 8px;
-    }
-    .timestamp {
-      font-size: 0.9em;
-      color: #777;
-      text-align: center;
-      margin-top: 15px;
+    h1, h2, h3 {
+      color: #ffd700;
     }
     a {
-      color: #4fc3f7;
+      color: #4da6ff;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
+    ul {
+      padding-left: 20px;
+    }
+    code {
+      background: #222;
+      padding: 2px 6px;
+      border-radius: 4px;
+    }
   </style>
 </head>
 <body>
-  <h1>💎 $AGP — AutoGoldPro</h1>
-  <p style="text-align: center; font-size: 1.1em;">
-    <strong>Fair Launch • LP Burned • 0% Tax</strong>
-  </p>
 
-  <div class="message">
-    <p>
-      Hi. I’m the creator behind AutoGoldPro, and I’m tired of scams.
-    </p>
-    <p>
-      So I’m launching <strong>$AGP</strong> — just to show it can be done differently.
-    </p>
-    <p style="font-weight: bold; color: gold; text-align: center; margin: 15px 0;">
-      «If it pumps — great. If not — you’ll still get a free pro-grade indicator.»
-    </p>
-    <p>
-      The <strong>ASTER Scalp Pro v5 Enhanced</strong> indicator will be available to all — but not yet.
-    </p>
-  </div>
+  <h1>$AGP — AutoGoldPro</h1>
+  <p><strong>Fair Launch • LP Burned • 0% Tax</strong></p>
 
-  <div class="coming-soon">
-    <h3>🚀 Coming Soon</h3>
-    <p>
-      The $AGP token is in final preparation.
-    </p>
-    <p>
-      ✅ Contract deployment<br>
-      ✅ Liquidity: 100M AGP + 0.1 BNB<br>
-      ✅ LP tokens burned to <code>0x000...dEaD</code><br>
-      ✅ Full transparency on BSCScan
-    </p>
-    <p>
-      <strong>Follow all updates in our official Telegram channel:</strong><br>
-      <a href="https://t.me/AutoGoldPro_AGP" target="_blank" class="btn btn-tg">
-        @AutoGoldPro_AGP
-      </a>
-    </p>
-    <div class="timestamp">
-      Last updated: October 25, 2025
-    </div>
-  </div>
+  <p>Hi. I’m the creator behind AutoGoldPro, and I’m tired of scams.<br>
+  So I’m launching <strong>$AGP</strong> — just to show it can be done differently.<br>
+  «If it pumps — great. If not — you’ll still get a free pro-grade indicator.»</p>
 
-  <h3>📊 About the Bonus Indicator</h3>
-  <p>
-    <strong>ASTER Scalp Pro v5 Enhanced</strong> is a TradingView script for manual trading:
-  </p>
+  <p>The <strong>ASTER Scalp Pro v5 Enhanced</strong> indicator will be available to all — but not yet.</p>
+
+  <h3>✅ Current Status (as of Oct 29, 2025)</h3>
+  <ul>
+    <li>✅ Contract deployed & verified</li>
+    <li>✅ Ownership confirmed on BSCScan</li>
+    <li>✅ Token info update submitted (logo pending approval)</li>
+    <li>🟡 Liquidity: 100M AGP / BNB pair — preparing</li>
+    <li>📢 Final launch announcement — coming after LP burn</li>
+  </ul>
+
+  <p><strong>Follow all updates in our official Telegram channel:</strong><br>
+  <a href="https://t.me/AutoGoldPro_AGP">@AutoGoldPro_AGP</a></p>
+
+  <p>Last updated: October 29, 2025</p>
+
+  <h3>About the Bonus Indicator</h3>
+  <p><strong>ASTER Scalp Pro v5 Enhanced</strong> is a TradingView script for manual trading:</p>
   <ul>
     <li>Modes: Conservative, Balanced, Aggressive</li>
     <li>Auto TP/SL + Trailing Stop</li>
     <li>Market filter (BTC, ETH, BNB, or any pair from BINANCE, BYBIT, OKX)</li>
     <li>Alerts for Long / Short signals</li>
   </ul>
-  <p>
-    🔒 <em>Access will be enabled after launch. Not available yet.</em>
-  </p>
+  <p><em>Access will be enabled after launch. Not available yet.</em></p>
 
   <h3>✅ Planned Token Details</h3>
   <ul>
     <li>Total Supply: 1,000,000,000 AGP</li>
-    <li>Liquidity: 100,000,000 AGP + 0.1 BNB</li>
+    <li>Liquidity: 100,000,000 AGP / BNB pair</li>
     <li>LP Status: Will be burned permanently</li>
     <li>Tax: 0% on all transfers</li>
     <li>Owner: None (immutable contract)</li>
   </ul>
 
-  <div style="text-align: center; margin: 20px 0;">
-    <span class="btn">Buy on PancakeSwap (soon)</span><br>
-    <span class="btn">Contract: 0x... (soon)</span>
-  </div>
+  <p>Buy on PancakeSwap (soon)<br>
+  Contract: <a href="https://bscscan.com/address/0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096" target="_blank">0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096</a></p>
 
-  <div class="disclaimer">
-    ⚠️ This is a meme token with no financial value. The indicator is for educational purposes only. Trading involves risk. Not financial advice.
-  </div>
+  <p>🔍 <a href="https://repo.sourcify.dev/56/0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096" target="_blank">Independent verification (Sourcify)</a></p>
+
+  <p>⚠️ This is a meme token with no financial value. The indicator is for educational purposes only. Trading involves risk. Not financial advice.</p>
+
+  <!--79206446108@yandex.ru-->
+
 </body>
 </html>
