--- a/index.html
+++ b/index.html
@@ -7,30 +7,55 @@
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      line-height: 1.6;
-      max-width: 800px;
+      line-height: 1.7;
+      max-width: 850px;
       margin: 40px auto;
       padding: 0 20px;
       color: #f0f0f0;
-      background: #0f0f12;
+      background: #0a0a0d;
     }
     h1, h2, h3 {
       color: #ffd700;
+      margin-top: 32px;
     }
-    a {
-      color: #4da6ff;
+    .card {
+      background: rgba(20, 20, 30, 0.6);
+      border: 1px solid #333;
+      border-radius: 12px;
+      padding: 20px;
+      margin: 24px 0;
+    }
+    .btn {
+      display: inline-block;
+      background: #1a1a2e;
+      color: #4da6ff !important;
+      padding: 10px 20px;
+      margin: 8px 8px 8px 0;
+      text-decoration: none;
+      border: 1px solid #444;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: all 0.2s;
+    }
+    .btn:hover {
+      background: #2a2a4e;
+      border-color: #666;
       text-decoration: none;
     }
-    a:hover {
-      text-decoration: underline;
-    }
     ul {
-      padding-left: 20px;
+      padding-left: 24px;
+    }
+    li {
+      margin-bottom: 8px;
     }
     code {
-      background: #222;
-      padding: 2px 6px;
+      background: #1e1e2e;
+      padding: 2px 8px;
       border-radius: 4px;
+      font-family: monospace;
+    }
+    .status-item {
+      margin: 6px 0;
     }
   </style>
 </head>
@@ -45,19 +70,17 @@
 
   <p>The <strong>ASTER Scalp Pro v5 Enhanced</strong> indicator will be available to all — but not yet.</p>
 
-  <h3>✅ Current Status (as of Oct 29, 2025)</h3>
-  <ul>
-    <li>✅ Contract deployed & verified</li>
-    <li>✅ Ownership confirmed on BSCScan</li>
-    <li>✅ Token info update submitted (logo pending approval)</li>
-    <li>🟡 Liquidity: 100M AGP / BNB pair — preparing</li>
-    <li>📢 Final launch announcement — coming after LP burn</li>
-  </ul>
+  <div class="card">
+    <h3>✅ Current Status (as of October 30, 2025)</h3>
+    <div class="status-item">✅ Contract deployed & verified</div>
+    <div class="status-item">✅ Ownership confirmed on BSCScan</div>
+    <div class="status-item">✅ Token info update submitted (logo pending approval)</div>
+    <div class="status-item">🟡 Liquidity: 100M AGP / BNB pair — preparing</div>
+    <div class="status-item">📢 Final launch announcement — coming after LP burn</div>
+  </div>
 
-  <p><strong>Follow all updates in our official Telegram channel:</strong><br>
-  <a href="https://t.me/AutoGoldPro_AGP">@AutoGoldPro_AGP</a></p>
-
-  <p>Last updated: October 29, 2025</p>
+  <p><strong>Follow all updates in our official Telegram channel:</strong></p>
+  <a href="https://t.me/AutoGoldPro_AGP" class="btn" target="_blank">Telegram @AutoGoldPro_AGP</a>
 
   <h3>About the Bonus Indicator</h3>
   <p><strong>ASTER Scalp Pro v5 Enhanced</strong> is a TradingView script for manual trading:</p>
@@ -69,19 +92,23 @@
   </ul>
   <p><em>Access will be enabled after launch. Not available yet.</em></p>
 
-  <h3>✅ Planned Token Details</h3>
-  <ul>
-    <li>Total Supply: 1,000,000,000 AGP</li>
-    <li>Liquidity: 100,000,000 AGP / BNB pair</li>
-    <li>LP Status: Will be burned permanently</li>
-    <li>Tax: 0% on all transfers</li>
-    <li>Owner: None (immutable contract)</li>
-  </ul>
+  <div class="card">
+    <h3>✅ Planned Token Details</h3>
+    <ul>
+      <li>Total Supply: 1,000,000,000 AGP</li>
+      <li>Liquidity: 100,000,000 AGP / BNB pair</li>
+      <li>LP Status: Will be burned permanently</li>
+      <li>Tax: 0% on all transfers</li>
+      <li>Owner: None (immutable contract)</li>
+    </ul>
+  </div>
 
-  <p>Buy on PancakeSwap (soon)<br>
-  Contract: <a href="https://bscscan.com/address/0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096" target="_blank">0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096</a></p>
+  <p>Buy on PancakeSwap (soon)</p>
 
-  <p>🔍 <a href="https://repo.sourcify.dev/56/0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096" target="_blank">Independent verification (Sourcify)</a></p>
+  <p>
+    <a href="https://bscscan.com/address/0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096" class="btn" target="_blank">BSCScan Contract</a>
+    <a href="https://repo.sourcify.dev/56/0x238b6FD97A9Ed8Cd7dc3ba820Aa45E83fd928096" class="btn" target="_blank">Sourcify Verification</a>
+  </p>
 
   <p>⚠️ This is a meme token with no financial value. The indicator is for educational purposes only. Trading involves risk. Not financial advice.</p>
 
