--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     .hero p {
       font-size: 1.1rem;
       max-width: 600px;
+      word-wrap: break-word;
+      hyphens: auto;
     }
     .hero strong {
       color: var(--accent-gold);
@@ -175,11 +177,32 @@
       border-radius: 8px;
     }
     @media (max-width: 768px) {
-      body { padding: 10px; }
-      h1 { font-size: 2.2rem; }
-      .card { padding: 1.5rem; margin: 1rem; }
-      .btn-group { flex-direction: column; align-items: center; }
-      .indicator-section ul, .indicator-section ol { max-width: 100%; }
+      body { 
+        padding: 15px; 
+      }
+      h1 { 
+        font-size: 2rem; 
+      }
+      .hero { 
+        padding: 1.5rem 1rem; 
+        gap: 0.75rem; 
+      }
+      .hero p { 
+        font-size: 1rem; 
+        line-height: 1.8; 
+        margin-bottom: 0.5rem; 
+      }
+      .card { 
+        padding: 1.5rem; 
+        margin: 1rem; 
+      }
+      .btn-group { 
+        flex-direction: column; 
+        align-items: center; 
+      }
+      .indicator-section ul, .indicator-section ol { 
+        max-width: 100%; 
+      }
     }
   </style>
 </head>
