--- a/index.html
+++ b/index.html
@@ -219,6 +219,16 @@
       }
       .indicator-section ul, .indicator-section ol { 
         max-width: 100%; 
+        padding-left: 1rem;
+      }
+      .indicator-section li { 
+        font-size: 0.95rem; 
+        line-height: 1.9; 
+        min-width: 100%; 
+      }
+      .indicator-section p { 
+        font-size: 0.95rem; 
+        line-height: 1.8; 
       }
     }
   </style>
@@ -253,7 +263,7 @@
     <ul>
       <li>Modes: Conservative, Balanced, Aggressive</li>
       <li>Auto TP/SL + Trailing Stop</li>
-      <li>Market filter (BTC, ETH, BNB, or any pair from BINANCE, BYBIT, OKX)</li>
+      <li>Market filter (BTC, ETH, BNB, or any pair from BINANCE,&nbsp;BYBIT,&nbsp;OKX)</li>
       <li>Alerts for Long / Short signals</li>
     </ul>
     <p><em>Access will be enabled after launch. Not available yet.</em></p>
