--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <ul>
       <li>Total Supply: 1,000,000,000 AGP</li>
       <li>Liquidity: 100,000,000 AGP / BNB pair</li>
-      <li>LP Status: Will be burned permanently</li>
+      <li>LP Status: Planned to be burned to 0x...dEaD after liquidity addition</li>
       <li>Tax: 0% on all transfers</li>
       <li>Owner: None (immutable contract)</li>
     </ul>
@@ -295,3 +295,4 @@
 
 </body>
 </html>
+
