--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
   </section>
 
   <div class="card">
-    <h3>✅ Current Status (as of October 31, 2025)</h3>
+    <h3>✅ Last update: current as of now</h3>
     <div class="status-item" data-icon="✅">Contract deployed & verified</div>
     <div class="status-item" data-icon="✅">Ownership confirmed on BSCScan</div>
     <div class="status-item" data-icon="✅">Token info update submitted (logo pending approval)</div>
@@ -373,3 +373,4 @@
 
 </body>
 </html>
+
