--- a/index.html
+++ b/index.html
@@ -339,6 +339,17 @@
   </section>
 
   <div class="card">
+    <h3>Team</h3>
+    <p>Solo founder — anonymous like Satoshi. Full transparency via GitHub commits and direct TG feedback on site. No team, no BS.</p>
+    <p>
+      GitHub: 
+      <a href="https://github.com/AutoGoldPro" target="_blank" style="color: var(--accent-blue); text-decoration: none;">
+        github.com/AutoGoldPro
+      </a>
+    </p>
+  </div>
+
+  <div class="card">
     <h3>✅ Planned Token Details</h3>
     <ul>
       <li>Total Supply: 1,000,000,000 AGP</li>
@@ -373,6 +384,3 @@
 
 </body>
 </html>
-
-
-
